Update charm-helpers-hooks.yaml and sync ch
Using the new version of the sync tool which removes the charmhelpers
directory before syncing, run charm helpers sync to find any unexpected
missing dependencies.

Change-Id: I8e046f8816fd91920ba2c15f8c960b74442eb7bd

--- a/charm-helpers-hooks.yaml
+++ b/charm-helpers-hooks.yaml
@@ -13,6 +13,6 @@ include:
     - payload.execd
     - contrib.network.ip
     - contrib.network.ufw
-    - contrib.python.packages
+    - contrib.python
     - contrib.charmsupport
     - contrib.hardening|inc=*
