Swift Global Cluster
This patchset adds a support for Swift Global Cluster feature as
described at:

https://docs.openstack.org/swift/latest/overview_global_cluster.html

It allows specifying 'region' config option as part of the deployment.
Theregion is reflected later on in the Swift rings.

Change-Id: I11b6c7802e5bfbd61b06e4d11c65804a165781b6
Partial-Bug: 1815879
Needed-By: I406445493e2226aa5ae40a09c9053ac8633a46e9

--- a/config.yaml
+++ b/config.yaml
@@ -5,25 +5,18 @@ options:
     description: |
       Repository from which to install.  May be one of the following:
       distro (default), ppa:somecustom/ppa, a deb url sources entry,
-      or a supported Cloud Archive release pocket.
+      or a supported Ubuntu Cloud Archive release pocket.
 
-      Supported Cloud Archive sources include:
+      Supported Ubuntu Cloud Archive sources include:
 
       cloud:<series>-<openstack-release>
       cloud:<series>-<openstack-release>/updates
       cloud:<series>-<openstack-release>/staging
       cloud:<series>-<openstack-release>/proposed
-
-      For series=Precise we support cloud archives for openstack-release:
-         * icehouse
-
-      For series=Trusty we support cloud archives for openstack-release:
-         * juno
-         * kilo
-         * ...
-
+      
       NOTE: updating this setting to a source that is known to provide
-      a later version of OpenStack will trigger a software upgrade.
+      a later version of OpenStack will trigger a software upgrade unless
+      the action-managed-upgrade configuration option is in play.
   block-device:
     default: sdb
     type: string
@@ -210,3 +203,22 @@ options:
     default: 512
     type: int
     description: XFS inode size to use for block devices.
+  storage-region:
+    default: 1
+    type: int
+    description: |
+      Swift storage region to request membership. Relevant only when the
+      swift-proxy charm has been configured with the Swift Global
+      Cluster feature.
+  object-server-port-rep:
+    default: 6010
+    type: int
+    description: Listening port of the swift-object-replicator server.
+  container-server-port-rep:
+    default: 6011
+    type: int
+    description: Listening port of the swift-container-replicator server.
+  account-server-port-rep:
+    default: 6012
+    type: int
+    description: Listening port of the swift-account-replicator server.
