--- a/templates/container-server.conf
+++ b/templates/container-server.conf
@@ -20,7 +20,9 @@ recon_cache_path = /var/cache/swift
 use = egg:swift#container
 allow_versions = true
 
+{% if not standalone_replicator %}
 [container-replicator]
+{% endif %}
 
 [container-updater]
 
