--- a/templates/object-server-replicator.conf
+++ b/templates/object-server-replicator.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 bind_ip = {{ bind_host }}
-bind_port = {{ account_server_port }}
+bind_port = {{ object_server_port_rep }}
 workers = {{ workers }}
 
 {% if statsd_host %}
@@ -10,19 +10,17 @@ log_statsd_default_sample_rate = {{ statsd_sample_rate }}
 
 {% endif %}
 [pipeline:main]
-pipeline = recon account-server
+pipeline = recon object-server
 
 [filter:recon]
 use = egg:swift#recon
 recon_cache_path = /var/cache/swift
 
-[app:account-server]
-use = egg:swift#account
+[app:object-server]
+use = egg:swift#object
+threads_per_disk = {{ object_server_threads_per_disk }}
+replication_server = true
 
-{% if not standalone_replicator %}
-[account-replicator]
-{% endif %}
-
-[account-auditor]
-
-[account-reaper]
+[object-replicator]
+concurrency = {{ object_replicator_concurrency }}
+rsync_timeout = {{ object_rsync_timeout }}
