--- a/templates/object-server.conf
+++ b/templates/object-server.conf
@@ -20,12 +20,16 @@ recon_cache_path = /var/cache/swift
 use = egg:swift#object
 threads_per_disk = {{ object_server_threads_per_disk }}
 
+{% if standalone_replicator %}
+[object-reconstructor]
+{% else %}
 [object-replicator]
 concurrency = {{ object_replicator_concurrency }}
 rsync_timeout = {{ object_rsync_timeout }}
 
-[object-updater]
+[object-sync]
+{% endif %}
 
 [object-auditor]
 
-[object-sync]
+[object-updater]
