--- a/templates/account-server-replicator.conf
+++ b/templates/account-server-replicator.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 bind_ip = {{ bind_host }}
-bind_port = {{ account_server_port }}
+bind_port = {{ account_server_port_rep }}
 workers = {{ workers }}
 
 {% if statsd_host %}
@@ -18,11 +18,6 @@ recon_cache_path = /var/cache/swift
 
 [app:account-server]
 use = egg:swift#account
+replication_server = true
 
-{% if not standalone_replicator %}
 [account-replicator]
-{% endif %}
-
-[account-auditor]
-
-[account-reaper]
