Make XFS inode size configurable
Make XFS inode size configurable, so that it could be set to the
desired value, if different than default 1024.

Change-Id: If621587a02746876ee6c35d7af2e878dbc2ac8ef
Closes-Bug: 1826552

--- a/config.yaml
+++ b/config.yaml
@@ -206,3 +206,7 @@ options:
     description: |
       Encrypt block devices used by swift using dm-crypt, making use of
       vault for encryption key management; requires a relation to vault.
+  xfs-inode-size:
+    default: 512
+    type: int
+    description: XFS inode size to use for block devices.
