py3: Switch packages to Python 3 for train and later
Switch package install to Python 3 for OpenStack Train and later.

When upgrading, remove any python-* packages that were explicitly
installated and then autoremove --purge any dependencies that are
no longer required.

This patch also includes the following related changes:
  * Use the common files package, swift, rather than python-swift
    when using a package name to determine release.

Also add OS_* to tox.ini to allow functional tests to execute.

Change-Id: I121af845bf11c22052479a497b196a4670021256

--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,7 @@ setenv = VIRTUAL_ENV={envdir}
 install_command =
   pip install {opts} {packages}
 commands = stestr run --slowest {posargs}
-whitelist_externals = juju
-passenv = HOME TERM AMULET_* CS_* OS_* TEST_*
+passenv = HOME TERM AMULET_* CS_API_* OS_* TEST_*
 
 [testenv:py3]
 basepython = python3
