--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,15 @@
-# Classic charm: ./tox.ini
+# Classic charm (with amulet): ./tox.ini
 # This file is managed centrally by release-tools and should not be modified
-# within individual charm repos.
+# within individual charm repos.  See the 'global' dir contents for available
+# choices of tox.ini for OpenStack Charms:
+#     https://github.com/openstack-charmers/release-tools
 [tox]
-envlist = pep8,py27,py37
+envlist = pep8,py3
 skipsdist = True
-skip_missing_interpreters = True
+# NOTE: Avoid build/test env pollution by not enabling sitepackages.
+sitepackages = False
+# NOTE: Avoid false positives by not skipping missing interpreters.
+skip_missing_interpreters = False
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -13,13 +18,14 @@ setenv = VIRTUAL_ENV={envdir}
          AMULET_SETUP_TIMEOUT=5400
 install_command =
   pip install {opts} {packages}
-commands = stestr run {posargs}
+commands = stestr run --slowest {posargs}
 whitelist_externals = juju
-passenv = HOME TERM AMULET_* CS_API_*
+passenv = HOME TERM AMULET_* CS_* OS_* TEST_*
 
-[testenv:py27]
-basepython = python2.7
-commands = /bin/true
+[testenv:py3]
+basepython = python3
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
 
 [testenv:py35]
 basepython = python3.5
@@ -40,7 +46,7 @@ deps = -r{toxinidir}/requirements.txt
 basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = flake8 {posargs} hooks unit_tests tests actions lib
+commands = flake8 {posargs} hooks unit_tests tests actions lib files
            charm-proof
 
 [testenv:cover]
@@ -54,7 +60,7 @@ setenv =
     PYTHON=coverage run
 commands =
     coverage erase
-    stestr run {posargs}
+    stestr run --slowest {posargs}
     coverage combine
     coverage html -d cover
     coverage xml -o cover/coverage.xml
@@ -75,7 +81,7 @@ omit =
 basepython = python3
 commands = {posargs}
 
-[testenv:func27-noop]
+[testenv:func-noop]
 # DRY RUN - For Debug
 basepython = python2.7
 deps = -r{toxinidir}/requirements.txt
@@ -83,7 +89,7 @@ deps = -r{toxinidir}/requirements.txt
 commands =
     bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" -n --no-destroy
 
-[testenv:func27]
+[testenv:func]
 # Charm Functional Test
 # Run all gate tests which are +x (expected to always pass)
 basepython = python2.7
@@ -92,7 +98,7 @@ deps = -r{toxinidir}/requirements.txt
 commands =
     bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" --no-destroy
 
-[testenv:func27-smoke]
+[testenv:func-smoke]
 # Charm Functional Test
 # Run a specific test as an Amulet smoke test (expected to always pass)
 basepython = python2.7
@@ -101,16 +107,7 @@ deps = -r{toxinidir}/requirements.txt
 commands =
     bundletester -vl DEBUG -r json -o func-results.json gate-basic-bionic-stein --no-destroy
 
-[testenv:func27-dfs]
-# Charm Functional Test
-# Run all deploy-from-source tests which are +x (may not always pass!)
-basepython = python2.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-commands =
-    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "dfs-*" --no-destroy
-
-[testenv:func27-dev]
+[testenv:func-dev]
 # Charm Functional Test
 # Run all development test targets which are +x (may not always pass!)
 basepython = python2.7
