--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -1,18 +1,19 @@
-# Bootstrap the model if necessary.
-bootstrap: True
-# Re-use bootstrap node.
-reset: True
-# Use tox/requirements to drive the venv instead of bundletester's venv feature.
-virtualenv: False
-# Leave makefile empty, otherwise unit/lint tests will rerun ahead of amulet.
-makefile: []
-# Do not specify juju PPA sources.  Juju is presumed to be pre-installed
-# and configured in all test runner environments.
-#sources:
-# Do not specify or rely on system packages.
-#packages:
-# Do not specify python packages here.  Use test-requirements.txt
-# and tox instead.  ie. The venv is constructed before bundletester
-# is invoked.
-#python-packages:
-reset_timeout: 600
+charm_name: swift-storage
+gate_bundles:
+  - bionic-train
+  - bionic-stein
+  - bionic-rocky
+  - bionic-queens
+  - xenial-queens
+  - xenial-pike
+  - xenial-ocata
+  - xenial-mitaka
+  - trusty-mitaka
+  - disco-stein
+smoke_bundles:
+  - bionic-train
+dev_bundles:
+  - disco-stein
+tests:
+  - zaza.openstack.charm_tests.swift.tests.SwiftImageCreateTest
+  - zaza.openstack.charm_tests.swift.tests.SwiftStorageTests
