--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,12 @@
-# Classic charm (with amulet): ./tox.ini
+# Classic charm (with zaza): ./tox.ini
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.  See the 'global' dir contents for available
 # choices of tox.ini for OpenStack Charms:
 #     https://github.com/openstack-charmers/release-tools
+#
+# TODO: Distill the func test requirements from the lint/unit test
+#       requirements.  They are intertwined.  Also, Zaza itself should specify
+#       all of its own requirements and if it doesn't, fix it there.
 [tox]
 envlist = pep8,py3
 skipsdist = True
@@ -15,16 +19,12 @@ skip_missing_interpreters = False
 setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
          CHARM_DIR={envdir}
-         AMULET_SETUP_TIMEOUT=5400
 install_command =
   pip install {opts} {packages}
 commands = stestr run --slowest {posargs}
-passenv = HOME TERM AMULET_* CS_API_* OS_* TEST_*
-
-[testenv:py3]
-basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+whitelist_externals = juju
+passenv = HOME TERM CS_* OS_* TEST_*
+deps = -r{toxinidir}/test-requirements.txt
 
 [testenv:py35]
 basepython = python3.5
@@ -38,6 +38,11 @@ deps = -r{toxinidir}/requirements.txt
 
 [testenv:py37]
 basepython = python3.7
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+
+[testenv:py3]
+basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 
@@ -81,39 +86,29 @@ basepython = python3
 commands = {posargs}
 
 [testenv:func-noop]
-# DRY RUN - For Debug
-basepython = python2.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+basepython = python3
 commands =
-    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" -n --no-destroy
+    functest-run-suite --help
 
 [testenv:func]
-# Charm Functional Test
-# Run all gate tests which are +x (expected to always pass)
-basepython = python2.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+basepython = python3
 commands =
-    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" --no-destroy
+    functest-run-suite --keep-model
 
 [testenv:func-smoke]
-# Charm Functional Test
-# Run a specific test as an Amulet smoke test (expected to always pass)
-basepython = python2.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+basepython = python3
 commands =
-    bundletester -vl DEBUG -r json -o func-results.json gate-basic-bionic-train --no-destroy
+    functest-run-suite --keep-model --smoke
 
 [testenv:func-dev]
-# Charm Functional Test
-# Run all development test targets which are +x (may not always pass!)
-basepython = python2.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+basepython = python3
 commands =
-    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "dev-*" --no-destroy
+    functest-run-suite --keep-model --dev
+
+[testenv:func-target]
+basepython = python3
+commands =
+    functest-run-suite --keep-model --bundle {posargs}
 
 [flake8]
 ignore = E402,E226
