Add monitoring for object-replicator logs disappearing
As noted in lp#1691570, there is an issue with storage I/O during
coro-thread cleanup that affects the swift-object-replicator's ability
to complete replication successfully.  This is most easily witnessed by
the lack of the every 5 minute replicated percentage complete messages
that should come from the swift-object-replicator daemon to syslog.
This patch monitors for and alerts on the condition of the "replicated"
line missing from syslog within the past 15 minutes.

Change-Id: Ieb15da3f3f67fa9bcad03151e36c70faae4c36c9
Closes-Bug: 1691570

--- a/config.yaml
+++ b/config.yaml
@@ -130,6 +130,20 @@ options:
     default: "-m -r 60 180 10 20"
     type: string
     description: String appended to nagios check
+  nagios-replication-check-params:
+    default: "replicated 15 2 1"
+    type: string
+    description: |
+      Space delimited parameters for check_swift_replicator_logs.sh.
+         search_pattern
+         interval_in_minutes
+         minimum_hits_before_warning
+         minimum_hits_before_critical
+      Default of "replicated 15 2 1" leads to warning alert when there
+      have not been at least 2 lines matching "replicated" in the last 15
+      minutes, and critical if there have been no matching lines in the
+      last 15 minutes.
+      Set to blank string "" to disable the check.
   nagios_context:
     default: "juju"
     type: string
