Updates for stable branch creation
Set default branch for git review/gerrit.

Switch amulet tests to stable.

Switch zaza bundles to stable charms.

Switch to using stable charm-helpers branch.

Change-Id: Ic34a390e755d1172d8add047fe3f34c41ecec201

--- a/tests/bundles/trusty-mitaka.yaml
+++ b/tests/bundles/trusty-mitaka.yaml
@@ -1,7 +1,7 @@
 series: trusty
 applications:
   swift-proxy:
-    charm: cs:~openstack-charmers-next/swift-proxy
+    charm: cs:swift-proxy
     series: trusty
     num_units: 1
     options:
@@ -18,13 +18,13 @@ applications:
       source: cloud:trusty-mitaka
   keystone:
     expose: True
-    charm: cs:~openstack-charmers-next/keystone
+    charm: cs:keystone
     num_units: 1
     options:
       openstack-origin: cloud:trusty-mitaka
   glance:
     expose: True
-    charm: cs:~openstack-charmers-next/glance
+    charm: cs:glance
     num_units: 1
     options:
       openstack-origin: cloud:trusty-mitaka
