--- a/tests/bundles/bionic-rocky.yaml
+++ b/tests/bundles/bionic-rocky.yaml
@@ -1,7 +1,7 @@
 series: bionic
 applications:
   swift-proxy:
-    charm: cs:~openstack-charmers-next/swift-proxy
+    charm: cs:swift-proxy
     series: bionic
     num_units: 1
     options:
@@ -10,7 +10,7 @@ applications:
       swift-hash: fdfef9d4-8b06-11e2-8ac0-531c923c8fae
       openstack-origin: cloud:bionic-rocky
   percona-cluster:
-    charm: cs:~openstack-charmers-next/percona-cluster
+    charm: cs:percona-cluster
     num_units: 1
     options:
       dataset-size: 25%
@@ -18,13 +18,13 @@ applications:
       source: cloud:bionic-rocky
   keystone:
     expose: True
-    charm: cs:~openstack-charmers-next/keystone
+    charm: cs:keystone
     num_units: 1
     options:
       openstack-origin: cloud:bionic-rocky
   glance:
     expose: True
-    charm: cs:~openstack-charmers-next/glance
+    charm: cs:glance
     num_units: 1
     options:
       openstack-origin: cloud:bionic-rocky
