--- a/tests/bundles/bionic-train-gr-r2.yaml
+++ b/tests/bundles/bionic-train-gr-r2.yaml
@@ -1,7 +1,7 @@
 series: bionic
 applications:
   swift-proxy-region2:
-    charm: cs:~openstack-charmers-next/swift-proxy
+    charm: cs:swift-proxy
     num_units: 1
     options:
       region: RegionTwo
