--- a/tests/bundles/xenial-mitaka.yaml
+++ b/tests/bundles/xenial-mitaka.yaml
@@ -1,7 +1,7 @@
 series: xenial
 applications:
   swift-proxy:
-    charm: cs:~openstack-charmers-next/swift-proxy
+    charm: cs:swift-proxy
     series: xenial
     num_units: 1
     options:
@@ -9,18 +9,18 @@ applications:
       replicas: 1
       swift-hash: fdfef9d4-8b06-11e2-8ac0-531c923c8fae
   percona-cluster:
-    charm: cs:~openstack-charmers-next/percona-cluster
+    charm: cs:percona-cluster
     num_units: 1
     options:
       dataset-size: 25%
       max-connections: 1000
   keystone:
     expose: True
-    charm: cs:~openstack-charmers-next/keystone
+    charm: cs:keystone
     num_units: 1
   glance:
     expose: True
-    charm: cs:~openstack-charmers-next/glance
+    charm: cs:glance
     num_units: 1
   swift-storage:
     charm: swift-storage
