Enable focal and ussuri as part of the gate tests
Add bionic-ussuri and focal-ussuri (with mysql8 support) bundles.

Change-Id: I03384198668553c6f8f853c724c8c397caa4f7e9

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -1,5 +1,7 @@
 charm_name: swift-storage
 gate_bundles:
+  - focal-ussuri
+  - bionic-ussuri
   - bionic-train
   - bionic-stein
   - bionic-rocky
@@ -19,3 +21,6 @@ tests:
   - zaza.openstack.charm_tests.swift.tests.SwiftStorageTests
   - swift_gr_region1:
     - zaza.openstack.charm_tests.swift.tests.SwiftGlobalReplicationTests
+tests_options:
+  force_deploy:
+    - focal-ussuri
