Add support for object replication handoffs_first
In extreme cases of object rebalance or node failure, swift environments
with millions of objects may have a hard time with objects landing in
handoff or misplaced partitions and the operator of the cloud may need
to prioritize migrating data in handoff partitions back to primary
partitions over the 3 primary partitions replicating amongst each other.

To allow for this, the object-server.conf [object-replicator]
configuration can have handoffs_first set to True which will force
the object-replicators to focus on handoff partitions before syncing
primary partitions for any given object partition.

Change-Id: I8b44c287567a0e6d634def0b13baf0fe4ad4aa7b
Closes-Bug: 1878087

--- a/templates/object-server.conf
+++ b/templates/object-server.conf
@@ -26,6 +26,9 @@ threads_per_disk = {{ object_server_threads_per_disk }}
 [object-replicator]
 concurrency = {{ object_replicator_concurrency }}
 rsync_timeout = {{ object_rsync_timeout }}
+{% if object_handoffs_first %}
+handoffs_first = True
+{% endif %}
 
 [object-sync]
 {% endif %}
