--- a/config.yaml
+++ b/config.yaml
@@ -114,6 +114,13 @@ options:
     type: int
     description: |
       Max duration of a partition rsync (in seconds).
+  object-handoffs-first:
+    type: boolean
+    default: False
+    description: |
+      If set to True, partitions that are not supposed to be on the node will
+      be replicated first. The default setting should not be changed, except
+      for extreme situations.
   nagios-check-params:
     default: "-m -r 60 180 10 20"
     type: string
