Add config option for fallocate_reserve
In order to prevent disks from filling up, add the option to configure
fallocate_reserve parameter in account-server.conf,
container-server.conf, and object-server.conf, as described in
https://docs.openstack.org/swift/latest/admin_guide.html#preventing-disk-full-scenarios

This change adds the config option file-allocation-reserve with a
default of 0.

Change-Id: Ib396a151250bb8d1733f9b5b9cab7eb506c9f6c6
Closes-Bug: 1872069

--- a/config.yaml
+++ b/config.yaml
@@ -126,6 +126,13 @@ options:
     type: int
     description: |
       Timeout value used when copying account/container/object data between nodes.
+  file-allocation-reserve:
+    default: 0
+    type: int
+    description: |
+      Set the reserve space for the swift filesystem mounts.
+      If a disk has less than this amount of space (in bytes) free, writes
+      will be handed off to another disk in the ring.
   nagios-check-params:
     default: "-m -r 60 180 10 20"
     type: string
