--- a/templates/container-server.conf
+++ b/templates/container-server.conf
@@ -5,6 +5,9 @@ workers = {{ workers }}
 {% if node_timeout -%}
 node_timeout = {{ node_timeout }}
 {%- endif %}
+{% if fallocate_reserve != 0 %}
+fallocate_reserve = {{ fallocate_reserve }}
+{% endif %}
 
 {% if statsd_host %}
 log_statsd_host = {{ statsd_host }}
