--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,27 +2,28 @@ name: swift-storage
 summary: OpenStack Object Storage - Swift storage service
 maintainer: OpenStack Charmers <openstack-charmers@lists.ubuntu.com>
 description: |
- OpenStack Object Storage (code-named Swift) is open source software for
- creating redundant, scalable object storage using clusters of standardized
- servers to store petabytes of accessible data. It is not a file system or
- real-time data storage system, but rather a long-term storage system for a
- more permanent type of static data that can be retrieved, leveraged, and
- then updated if necessary. Primary examples of data that best fit this
- type of storage model are virtual machine images, photo storage, email
- storage and backup archiving. Having no central "brain" or master point of
- control provides greater scalability, redundancy and permanence.
- .
- This charm deploys the Swift storage service, supporting HTTP based access
- via Swift proxy services.
+  OpenStack Object Storage (code-named Swift) is open source software for
+  creating redundant, scalable object storage using clusters of standardized
+  servers to store petabytes of accessible data. It is not a file system or
+  real-time data storage system, but rather a long-term storage system for a
+  more permanent type of static data that can be retrieved, leveraged, and
+  then updated if necessary. Primary examples of data that best fit this
+  type of storage model are virtual machine images, photo storage, email
+  storage and backup archiving. Having no central "brain" or master point of
+  control provides greater scalability, redundancy and permanence.
+  .
+  This charm deploys the Swift storage service, supporting HTTP based access
+  via Swift proxy services.
 tags:
-  - openstack
-  - file-servers
+- openstack
+- file-servers
 series:
-  - xenial
-  - bionic
-  - eoan
-  - focal
-  - trusty
+- xenial
+- bionic
+- eoan
+- focal
+- trusty
+- groovy
 extra-bindings:
   replication:
   cluster:
