Allow configuring node_timeout
Swift default is used if no config provided.
As per swift docs, if node_timeout is set,
http_timeout ensured to be greater than
node_timeout.

Change-Id: Idf5945a6c2f64fcad8f2ab7cb137f1ce1f1dc424
Closes-Bug: #1878657

--- a/templates/container-server.conf
+++ b/templates/container-server.conf
@@ -2,6 +2,9 @@
 bind_ip = {{ bind_host }}
 bind_port = {{ container_server_port }}
 workers = {{ workers }}
+{% if node_timeout -%}
+node_timeout = {{ node_timeout }}
+{%- endif %}
 
 {% if statsd_host %}
 log_statsd_host = {{ statsd_host }}
