--- a/templates/object-server.conf
+++ b/templates/object-server.conf
@@ -2,6 +2,9 @@
 bind_ip = {{ bind_host }}
 bind_port = {{ object_server_port }}
 workers = {{ workers }}
+{% if node_timeout -%}
+node_timeout = {{ node_timeout }}
+{%- endif %}
 
 {% if statsd_host %}
 log_statsd_host = {{ statsd_host }}
@@ -22,6 +25,9 @@ threads_per_disk = {{ object_server_threads_per_disk }}
 
 {% if standalone_replicator %}
 [object-reconstructor]
+{% if http_timeout -%}
+http_timeout = {{ http_timeout }}
+{%- endif %}
 {% else %}
 [object-replicator]
 concurrency = {{ object_replicator_concurrency }}
@@ -29,6 +35,9 @@ rsync_timeout = {{ object_rsync_timeout }}
 {% if object_handoffs_first %}
 handoffs_first = True
 {% endif %}
+{% if http_timeout -%}
+http_timeout = {{ http_timeout }}
+{%- endif %}
 
 [object-sync]
 {% endif %}
