--- a/config.yaml
+++ b/config.yaml
@@ -121,6 +121,11 @@ options:
       If set to True, partitions that are not supposed to be on the node will
       be replicated first. The default setting should not be changed, except
       for extreme situations.
+  node-timeout:
+    default:
+    type: int
+    description: |
+      Timeout value used when copying account/container/object data between nodes.
   nagios-check-params:
     default: "-m -r 60 180 10 20"
     type: string
