Ensure lockup_timeout is never < 2*rsync_timeout
Change-Id: Id0afc210b7be8ac7c740753ef06b51db0bae410c
Closes-Bug: 1888725

--- a/config.yaml
+++ b/config.yaml
@@ -114,6 +114,12 @@ options:
     type: int
     description: |
       Max duration of a partition rsync (in seconds).
+  object-lockup-timeout:
+    default: 1800
+    type: int
+    description: |
+      Attempt to kill all workers if nothing replicates for this amount of seconds
+      Note: this will always be set to no less than 2*object-rsync-timeout.
   object-handoffs-first:
     type: boolean
     default: False
