--- a/templates/object-server-replicator.conf
+++ b/templates/object-server-replicator.conf
@@ -24,3 +24,4 @@ replication_server = true
 [object-replicator]
 concurrency = {{ object_replicator_concurrency }}
 rsync_timeout = {{ object_rsync_timeout }}
+lockup_timeout = {{ object_lockup_timeout }}
