--- a/templates/object-server.conf
+++ b/templates/object-server.conf
@@ -35,6 +35,7 @@ http_timeout = {{ http_timeout }}
 [object-replicator]
 concurrency = {{ object_replicator_concurrency }}
 rsync_timeout = {{ object_rsync_timeout }}
+lockup_timeout = {{ object_lockup_timeout }}
 {% if object_handoffs_first %}
 handoffs_first = True
 {% endif %}
