Adding debugs and understanting charms
Change-Id: I2fbd0194a64943f536fff25ff05934a8ec4c74c7

--- a/templates/object-server-replicator.conf
+++ b/templates/object-server-replicator.conf
@@ -25,3 +25,10 @@ replication_server = true
 concurrency = {{ object_replicator_concurrency }}
 rsync_timeout = {{ object_rsync_timeout }}
 lockup_timeout = {{ object_lockup_timeout }}
+{% if object_handoffs_first %}
+handoffs_first = True
+{% endif %}
+{% if http_timeout -%}
+http_timeout = {{ http_timeout }}
+{%- endif %}
+
